--- a/style.css
+++ b/style.css
@@ -444,3 +444,19 @@ header nav .right a:hover::after{
     width: 100%;
     height: 100%;
 }
+
+@media screen and (max-width: 1220px) {
+    .sec4 .container .projet{
+        margin: 60px auto;
+    }
+}
+
+@media screen and (max-width: 650px) {
+    .sec4 .container .projet{
+        width: 100%;
+    }
+
+    .sec4 .title{
+        width: 100%;
+    }
+}
